--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,5 @@
 name: React CI/CD Pipeline
 
-# This triggers the workflow on pushes and pull requests to the main branch
 on:
   push:
     branches:
@@ -12,22 +11,22 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-latest  # This specifies the OS for the job
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2  # Checks out the code from your repository
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2  # Sets up the Node.js environment
+        uses: actions/setup-node@v3
         with:
-          node-version: '16'  # Specifies the version of Node.js
+          node-version: '16'
 
       - name: Install dependencies
-        run: npm install  # Installs the required dependencies
+        run: npm install
 
       - name: Build the app
-        run: npm run build  # Builds the React app for production
+        run: npm run build
 
   tests:
     name: Run Tests
@@ -37,35 +36,33 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        
-      - name: Use Node.js 18.x to run Test
+
+      - name: Use Node.js 18.x to run Tests
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
           cache: 'npm'
-          
+
       - name: Install Dependencies
         run: npm ci
-        
+
       - name: Run Tests
         run: npm run test
 
-      #- name: Build the app
-      #  run: npm run build  # Builds the React app for production
-  # Job to deploy the application after build
   deploy:
-    name: Deploy
+    name: Deploy to Vercel
     runs-on: ubuntu-latest
-    needs: tests  # Ensures the deploy job runs only after the build job completes successfully
+    needs: tests
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2  # Re-checks out the code for deployment
+        uses: actions/checkout@v3
 
       - name: Deploy to Vercel
+        uses: amondnet/vercel-action@v20
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
         env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}  # Pulls Vercel token from GitHub secrets
-        run: npx vercel --prod --yes --token $VERCEL_TOKEN 
-        #run: npx vercel --prod  # Runs the Vercel deployment in production mode
-        #env:
-        #  VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}  # Uses the Vercel token from GitHub Secrets
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
